--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-
-
-<button>HOLA</button>
-<button>ADIOS</button>
-
-<button>ADIOS DE VERDAD</button>
-
-<button>ADIOS DE VERDAD</button>
-
-
-
+<kyo-angular-menu></kyo-angular-menu>
