--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<kyo-angular-menu></kyo-angular-menu>
+<div class="container">
+    <kyo-angular-date></kyo-angular-date>
+    <kyo-angular-decimal></kyo-angular-decimal>
+    <kyo-angular-time></kyo-angular-time>
+    <kyo-angular-search></kyo-angular-search>
+</div>
