--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <kyo-angular-decimal></kyo-angular-decimal>
     <kyo-angular-time></kyo-angular-time>
     <kyo-angular-search></kyo-angular-search>
+    <kyo-angular-text></kyo-angular-text>
 </div>
